2014-01-22  Mihnea Ovidenie  <mihnea@adobe.com>

        [CSSRegions] Incorrect layout of a region pseudo children
        https://bugs.webkit.org/show_bug.cgi?id=126146

        Reviewed by David Hyatt.

        * fast/regions/collapse-anonymous-region-expected.html: Added.
        * fast/regions/collapse-anonymous-region.html: Added.

2014-01-21  Ryuan Choi  <ryuan.choi@samsung.com>

        Remove unused "acceleratedCompositingForScrollableFramesEnabled" setting
        https://bugs.webkit.org/show_bug.cgi?id=127402

        Reviewed by Anders Carlsson.

        * compositing/iframes/iframe-composited-scrolling.html:
        Removed acceleratedCompositingForScrollableFramesEnabled changes because
        it is dead code in WebCore side.

2014-01-21  Zalan Bujtas  <zalan@apple.com>

        Subpixel Layout: Off-by-one pixel text when multiple regions with different widths are present.
        https://bugs.webkit.org/show_bug.cgi?id=127212

        Reviewed by Simon Fraser.

        Subpixel values accumulate differently when computing the text position inside a 300px wide div
        vs. multiple 'flow into' regions with 300px, 400px widths. They are both correct. Blink
        also addressed it by adjusting the test content.

        * fast/regions/overflow-moving-below-floats-in-variable-width-regions.html:
        * platform/mac/TestExpectations:

2014-01-21  László Langó  <llango.u-szeged@partner.samsung.com>

        Assertion failure in Range::nodeWillBeRemoved
        https://bugs.webkit.org/show_bug.cgi?id=121694

        Reviewed by Ryosuke Niwa.

        * fast/dom/Range/remove-twice-crash-expected.txt: Added.
        * fast/dom/Range/remove-twice-crash.html: Added.

2014-01-21  Alexey Proskuryakov  <ap@apple.com>

        AX: Mac: Expose the visible text of a password field to AX
        https://bugs.webkit.org/show_bug.cgi?id=127353

        Test landed with this fix was filing everywhere, trying to fix it.
