@@ -1,3 +1,11 @@
+2014-01-22  Alexey Proskuryakov  <ap@apple.com>
+
+        inspector-protocol/page/deny-X-FrameOption.html is very flaky
+        https://bugs.webkit.org/show_bug.cgi?id=127414
+
+        * inspector-protocol/page/deny-X-FrameOption.html: Speculative fix, don't manipulate
+        a frame before onload, even if it's empty.
+
 2014-01-22  Mihnea Ovidenie  <mihnea@adobe.com>
 
         [CSSRegions] Incorrect layout of a region pseudo children
